# personal_tools

./: LICENSE
bedin/: download.py
music/: convert.py  convert_to_flac.py
soft/graphics/: .gitignore  CMakeLists.txt
soft/graphics/src/: BufferConverterTest.cxx  gl_tex_format_conversions.c
soft/updaters/: cmake_update_task.py  git_update_task.py
video/: download_segments.py  make_webm.py
windows_setup/: README.md
